--- a/EveryoneCode.vcxproj.filters
+++ b/EveryoneCode.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Data.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Marine.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header1.hpp">
@@ -54,6 +57,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Date.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Marine.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
